# cpp_starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_code_coverage.sh  main.cpp
Tests/: Test.cpp
